<resources>
    <string name="app_name">Opinião de tudo</string>
    <string name="label_nova_opiniao">Nova Opinião</string>
    <string name="label_nome">Nome</string>
    <string name="label_opiniao">Opiniao</string>
    <string name="input_name">Nome do produto/filme/coisa</string>
    <string name="input_opinicao">Escreva aqui a sua opinião</string>
    <string name="lavel_btn_salvar">Salvar</string>

    <string name="menu_list_reviews_label">MENU</string>
</resources>