<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/label_nova_opiniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" android:textSize="24sp" android:textStyle="bold"/>

    <TextView
        android:text="@string/label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/input_nome" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
        android:hint="@string/input_name"/>

    <TextView
        android:text="@string/label_opiniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_nome"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:id="@+id/input_review" android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save" android:hint="@string/input_opinicao"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lavel_btn_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>